BUGFIX: overflow: auto

--- a/assets/css/dialog.css
+++ b/assets/css/dialog.css
@@ -8,7 +8,7 @@
     z-index: 600;
     border: 2px solid #eee;
     overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     box-shadow: 0 0 20px rgba(0, 0, 0, .8);
 
     transition: opacity;
